# Kodaal-Guppy

./: .gitignore  README.md
kodaal-guppy/: .gitignore  Cargo.toml  LICENSE  README.md  RUN_GUPPY.md  deny.toml  justfile
kodaal-guppy/browser-ext/: background.js  content.js  manifest.json  package.json  popup.css  popup.js  (+2 more)
kodaal-guppy/core/: Cargo.toml  openapi.yaml
kodaal-guppy/core/migrations/: V001__initial_schema.sql  V002__add_artifacts.sql  V003__watcher_offsets.sql  V004__add_desktop_source.sql  V005__prompt_redaction.sql
kodaal-guppy/core/src/: app.rs  auth.rs  cli.rs  config.rs  db.rs  error.rs  http_api.rs  ids.rs  lib.rs  local_api.rs  main.rs  mcp.rs  paths.rs  server.rs  ui.rs  watchers.rs
kodaal-guppy/core/src/cli/: definitions.rs  helpers.rs  local_commands.rs  native_host.rs  prompt_commands.rs  service_commands.rs  tests.rs  workspace_commands.rs
kodaal-guppy/core/src/completion/: bash  fish  powershell  zsh
kodaal-guppy/core/src/config/: tests.rs
kodaal-guppy/core/src/db/: artifacts.rs  core.rs  export_import.rs  helpers.rs  models.rs  prompts.rs  stats.rs  suggestions.rs
kodaal-guppy/core/src/http_api/: artifact_routes.rs  capture_routes.rs  export_routes.rs  helpers.rs  organization_routes.rs  prompt_routes.rs  router.rs
kodaal-guppy/core/src/mcp/: definitions.rs  runtime.rs  tests.rs  tools.rs
kodaal-guppy/core/src/ui/: index.html
kodaal-guppy/core/src/watchers/: normalization.rs  parsers.rs  policy.rs  runtime.rs  tests.rs
kodaal-guppy/core/tests/: api_core.rs  mcp_stdio.rs
kodaal-guppy/tray-app/: Cargo.toml  build.rs  tauri.conf.json
kodaal-guppy/tray-app/assets/: about.html
kodaal-guppy/tray-app/src/: api_client.rs  events.rs  lib.rs  main.rs  tray.rs
(+46 files in other folders)
