[package]
name = "kodaal-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kodaal"
path = "src/main.rs"

[dependencies]
axum = { version = "=0.6.20", features = ["json", "multipart"] }
chrono = { version = "=0.4.44", default-features = false, features = ["clock", "serde"] }
clap = { version = "=4.5.20", features = ["derive"] }
hex = "=0.4.3"
http = "=0.2.12"
rand = "=0.8.6"
rusqlite = { version = "=0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
thiserror = "=1.0.69"
tokio = { version = "=1.52.2", features = ["macros", "rt-multi-thread", "signal"] }
toml = "=0.8.23"
tower-http = { version = "=0.4.4", features = ["cors"] }
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "=0.4.13", features = ["util"] }
tempfile = "=3.13.0"
hyper = "=0.14.32"
