[package]
name = "kodaal-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-build"]

[lib]
name = "kodaal_tray"
path = "src/lib.rs"

[[bin]]
name = "kodaal-tray"
path = "src/main.rs"
required-features = ["desktop"]

[dependencies]
kodaal-core = { path = "../core" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.11.1", optional = true, features = ["tray-icon", "image-png"] }

[build-dependencies]
tauri-build = { version = "=2.6.1", optional = true }
